--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "hardhat-ropsten": "hardhat --network ropsten",
     "hardhat-main": "hardhat --network main",
     "hardhat:tenderly": "hardhat --network tenderly",
+    "hardhat-shibuya": "hardhat --network shibuya",
     "hardhat help": "hardhat help",
     "compile": "SKIP_LOAD=true hardhat compile",
     "compile:force": "npm run compile -- --force",
@@ -32,6 +33,7 @@
     "ropsten:deployment": "npm run hardhat-ropsten -- common-deployment --verify",
     "kovan:deployment": "npm run hardhat-kovan -- common-deployment --verify",
     "main:deployment": "npm run hardhat-main -- common-deployment --verify",
+    "shibuya:deployment": "npm run hardhat-shibuya -- common-deployment",
     "prettier:check": "npx prettier -c 'tasks/**/*.ts' 'contracts/**/*.sol' 'helpers/**/*.ts'  'test/**/*.ts'",
     "prettier:write": "prettier --write 'tasks/**/*.ts' 'contracts/**/*.sol' 'helpers/**/*.ts'  'test/**/*.ts'",
     "ci:clean": "rm -rf types/ cache/ artifacts/",
