add astar networks

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "hardhat-kovan": "hardhat --network kovan",
     "hardhat-main": "hardhat --network main",
     "hardhat:tenderly": "hardhat --network tenderly",
+    "hardhat-astar": "hardhat --network astar",
+    "hardhat-shiden": "hardhat --network shiden",
     "hardhat-shibuya": "hardhat --network shibuya",
     "hardhat help": "hardhat help",
     "compile": "SKIP_LOAD=true hardhat compile",
@@ -31,6 +33,8 @@
     "dev:deployment": "hardhat dev-deployment",
     "kovan:deployment": "npm run hardhat-kovan -- common-deployment --verify",
     "main:deployment": "npm run hardhat-main -- common-deployment --verify",
+    "astar:deployment": "npm run hardhat-astar -- common-deployment",
+    "shiden:deployment": "npm run hardhat-shiden -- common-deployment",
     "shibuya:deployment": "npm run hardhat-shibuya -- common-deployment",
     "prettier:check": "npx prettier -c 'tasks/**/*.ts' 'contracts/**/*.sol' 'helpers/**/*.ts'  'test/**/*.ts'",
     "prettier:write": "prettier --write 'tasks/**/*.ts' 'contracts/**/*.sol' 'helpers/**/*.ts'  'test/**/*.ts'",
