--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,10 @@ jobs:
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
+      - name: Initialize submodules
+        run: |
+          git submodule init
+          git submodule update
       - name: Install dependencies
         run: npm ci
       - name: Compile
