--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "test-bpt": "npm run compile:force:quiet && FORKING_BLOCK=11730175 MAINNET_FORK=true hardhat test test/StakedBPT/create-bpt-and-stakebpt.fork.ts",
     "test-proposal": "MAINNET_FORK=true hardhat test ./test-fork/stakingExtensionProposal.spec.ts",
     "test-proposal:tenderly": "TENDERLY=true npm run hardhat:tenderly -- test ./test-fork/stakingExtensionProposal.spec.ts",
-    "proposal-extend-stkaave:tenderly": "TENDERLY=true npm run hardhat:tenderly -- proposal-stk-aave-extension:tenderly",
-    "proposal-extend-stkaave:tenderly:defender": "TENDERLY=true npm run hardhat:tenderly -- proposal-stk-aave-extension:tenderly --defender",
+    "proposal-extend-stklay:tenderly": "TENDERLY=true npm run hardhat:tenderly -- proposal-stk-lay-extension:tenderly",
+    "proposal-extend-stklay:tenderly:defender": "TENDERLY=true npm run hardhat:tenderly -- proposal-stk-lay-extension:tenderly --defender",
     "coverage": "npm run compile && npx hardhat coverage --testfiles \"test/**/*.spec.ts\"",
     "dev:deployment": "hardhat dev-deployment",
     "kovan:deployment": "npm run hardhat-kovan -- common-deployment --verify",
