--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "astar:deployment": "npm run hardhat-astar -- common-deployment",
     "shiden:deployment": "npm run hardhat-shiden -- common-deployment",
     "shibuya:deployment": "npm run hardhat-shibuya -- common-deployment",
+    "shibuya:deployment-StakedTokenV2Rev3": "npm run hardhat-shibuya -- deploy-StakedTokenV2Rev3",
     "prettier:check": "npx prettier -c 'tasks/**/*.ts' 'contracts/**/*.sol' 'helpers/**/*.ts'  'test/**/*.ts'",
     "prettier:write": "prettier --write 'tasks/**/*.ts' 'contracts/**/*.sol' 'helpers/**/*.ts'  'test/**/*.ts'",
     "ci:clean": "rm -rf types/ cache/ artifacts/",
