--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "shiden:deployment": "npm run hardhat-shiden -- common-deployment",
     "shibuya:deployment": "npm run hardhat-shibuya -- common-deployment",
     "main:deployment-StakedTokenV2Rev3": "npm run hardhat-main -- deploy-StakedTokenV2Rev3",
+    "kovan:deployment-StakedTokenV2Rev3": "npm run hardhat-kovan -- deploy-StakedTokenV2Rev3",
     "astar:deployment-StakedTokenV2Rev3": "npm run hardhat-astar -- deploy-StakedTokenV2Rev3",
     "shiden:deployment-StakedTokenV2Rev3": "npm run hardhat-shiden -- deploy-StakedTokenV2Rev3",
     "shibuya:deployment-StakedTokenV2Rev3": "npm run hardhat-shibuya -- deploy-StakedTokenV2Rev3",
