update package.json - add command to deploy to rinkeby

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "run-env": "npm i && tail -f /dev/null",
     "hardhat": "hardhat",
     "hardhat-kovan": "hardhat --network kovan",
+    "hardhat-rinkeby": "hardhat --network rinkeby",
     "hardhat-main": "hardhat --network main",
     "hardhat:tenderly": "hardhat --network tenderly",
     "hardhat-astar": "hardhat --network astar",
@@ -37,6 +38,7 @@
     "shiden:deployment": "npm run hardhat-shiden -- common-deployment",
     "shibuya:deployment": "npm run hardhat-shibuya -- common-deployment",
     "main:deployment-StakedTokenV2Rev3": "npm run hardhat-main -- deploy-StakedTokenV2Rev3",
+    "rinkeby:deployment-StakedTokenV2Rev3": "npm run hardhat-rinkeby -- deploy-StakedTokenV2Rev3",
     "kovan:deployment-StakedTokenV2Rev3": "npm run hardhat-kovan -- deploy-StakedTokenV2Rev3",
     "astar:deployment-StakedTokenV2Rev3": "npm run hardhat-astar -- deploy-StakedTokenV2Rev3",
     "shiden:deployment-StakedTokenV2Rev3": "npm run hardhat-shiden -- deploy-StakedTokenV2Rev3",
