--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "astar:deployment-StakedTokenV2Rev3": "npm run hardhat-astar -- deploy-StakedTokenV2Rev3",
     "shiden:deployment-StakedTokenV2Rev3": "npm run hardhat-shiden -- deploy-StakedTokenV2Rev3",
     "shibuya:deployment-StakedTokenV2Rev3": "npm run hardhat-shibuya -- deploy-StakedTokenV2Rev3",
+    "astar:initialize-StakedTokenV2Rev3": "npm run hardhat-astar -- initialize-StakedTokenV2Rev3",
+    "shiden:initialize-StakedTokenV2Rev3": "npm run hardhat-shiden -- initialize-StakedTokenV2Rev3",
+    "shibuya:initialize-StakedTokenV2Rev3": "npm run hardhat-shibuya -- initialize-StakedTokenV2Rev3",
     "prettier:check": "npx prettier -c 'tasks/**/*.ts' 'contracts/**/*.sol' 'helpers/**/*.ts'  'test/**/*.ts'",
     "prettier:write": "prettier --write 'tasks/**/*.ts' 'contracts/**/*.sol' 'helpers/**/*.ts'  'test/**/*.ts'",
     "ci:clean": "rm -rf types/ cache/ artifacts/",
