--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "submodule-protocol"]
 	path = submodule-protocol
-	url = https://github.com/starlay-finance/starlay-protocol
+	url = git@github.com:starlay-finance/starlay-protocol
