add commands to use print-config

--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     "astar:initialize-StakedTokenV2Rev3": "npm run hardhat-astar -- initialize-StakedTokenV2Rev3",
     "shiden:initialize-StakedTokenV2Rev3": "npm run hardhat-shiden -- initialize-StakedTokenV2Rev3",
     "shibuya:initialize-StakedTokenV2Rev3": "npm run hardhat-shibuya -- initialize-StakedTokenV2Rev3",
+    "astar:print-configs": "npm run hardhat-astar -- print-configs",
+    "shiden:print-configs": "npm run hardhat-shiden -- print-configs",
+    "shibuya:print-configs": "npm run hardhat-shibuya -- print-configs",
     "prettier:check": "npx prettier -c 'tasks/**/*.ts' 'contracts/**/*.sol' 'helpers/**/*.ts'  'test/**/*.ts'",
     "prettier:write": "prettier --write 'tasks/**/*.ts' 'contracts/**/*.sol' 'helpers/**/*.ts'  'test/**/*.ts'",
     "ci:clean": "rm -rf types/ cache/ artifacts/",
